--- a/design_mode/link.html
+++ b/design_mode/link.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-06-03 10:14:58
- * @LastEditTime: 2020-06-04 22:09:30
+ * @LastEditTime: 2020-06-10 20:15:14
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: /interviews/interview/design_mode/link.html
@@ -19,34 +19,176 @@
   <div id="demo">a</div>
   <div id="test">b</div>
   <script>
-    var A = function(selector) {
-      return new A.fn.init(selector)
+    var A = function(selector, context) {
+      return new A.fn.init(selector, context)
     }
-    // A.fn = A.prototype = {
-    A.fn = {
+    A.fn = A.prototype = {
       constructor: A,
-      init: function(selector) {
-        this[0] = document.getElementById(selector)
-        this.length = 1
+      init: function(selector, context) {
+        // 获取元素长度
+        this.length = 0,
+        // 默认获取元素的上下文为document
+        context = context || document
+        // 如果是id选择符 按位非将-1转化为0，转化为布尔值false
+        if(~selector.indexOf('#')) {
+          // 截取id并选择
+          this[0] = document.getElementById(selector.slice(1))
+          this.length = 1
+        }
+        // 如果是元素名称
+        else
+        {
+          // 在上下文中选择元素
+          var doms = context.getElementsByTagName(selector),
+            i = 0,
+            len = doms.length;
+          for (; i < len; i++) {
+            // 压入this中
+            console.log('i is ', i)
+            this[i] = doms[i]
+          }
+          // 矫正长度
+          this.length = len
+        }
+        // 保存上下文
+        this.context = context;
+        // 保存选择符
+        this.selector = selector;
+        // 返回对象
         return this
       },
-      length: 2,
-      size() {
-        return this.length
-      }
+      // push: [].push,
+      // sort: [].sort,
+      // 基本上存在这些数组方法，浏览器就会认为这是个数组并非对象，可以在console.log的时候以数组的形式表示
+      splice: [].splice
     }
     A.fn.init.prototype = A.fn
 
-    var demo = A('demo')
-    console.log('demo is ', demo)
+    // 对象拓展
+    A.extend = A.fn.extend = function() {
+      // 拓展对象从第二个参数算起
+      var i = 1,
+        // 获取参数长度
+        len = arguments.length,
+        // 第一个参数为源对象
+        target = arguments[0],
+        // 拓展对象中属性
+        j;
+      // 如果只传一个参数
+      if (i == len) {
+        // 源对象为当前对象
+        console.log('this is ', this)
+        target = this
+        // i 从 0 计数
+        i--
+      }
+      // 遍历参数中拓展对象
+      for (; i < len; i++) {
+        // 遍历拓展对象中的属性
+        for (j in arguments[i]) {
+          // 拓展源对象
+          target[j] = arguments[i][j]
+        }
+      }
+      // 返回源对象
+      return target
+    }
 
-    // var jqdemo = $('#demo')
-    // console.log('jqdemo is ', jqdemo)
-    // console.log('size is ', demo.size())
+    var divs = A('div') // 搜索所有div
+    var demo = A('#demo') // 搜索所有demo
+    console.log('采集所有的div :', divs)
+    console.log('采集的id为demo :', demo)
 
-    // var test = A('test')
-    // console.log('test is ', test)
-    // console.log('size is ', test.size())
+    // 拓展一个对象
+    var extendObj = A.extend({first: 1}, {second: 2}, {third: 3})
+    console.log('拓展对象 :', extendObj)
+    // 拓展A.fn方式一
+    A.extend(A.fn, {version: '1.0'});
+    console.log('拓展一 ~ demo的版本是 :', A('demo').version)
+    // 拓展A.fn方式二
+    A.fn.extend({ getVersion: function() {return this.version} })
+    console.log('拓展二 ~ demo的版本是 :', A('demo').getVersion())
+
+    A.fn.extend({
+      // 添加事件
+      on: (function() {
+        // 标准浏览器DOM2级事件
+        if (document.addEventListener) {
+          return function(type, fn) {
+            var i = this.length - 1
+            // 遍历所有元素添加事件
+            for (; i >= 0; i--) {
+              this[i].addEventListener(type, fn, false)
+            }
+            // 返回原对象
+            return this
+          }
+        }
+        // IE浏览器DOM2级事件
+        else if (document.attachEvent) {
+          return function(type, fn) {
+            var i = this.length - 1
+            for (;i >= 0; i--) {
+              this[i].addEvent('on' + type, fn)
+            }
+            return this
+          }
+        }
+        // 不支持DOM2级事件浏览器添加事件
+        else {
+          return function(type, fn) {
+            var i = this.length - 1
+            for (; i >= 0; i--) {
+              this[i]['on' + type] = fn
+            }
+            return this
+          }
+        }
+      })()
+    })
+
+    A.extend({
+      // 将'-'分割线转化为驼峰式，如：'border-color' -> 'borderColor'
+      camelCase: function(str) {
+        return str.replace(/\-(\w)/g, function(all, letter) {
+          return letter.toUpperCase()
+        })
+      }
+    })
+
+    A.extend({
+      // 设置css样式
+      css: function() {
+        var arg = arguments,
+          len = arg.length;
+        if (this.length < 1) {
+          return this
+        }
+        // 只有一个参数时
+        if (len === 1) {
+          // 如果为字符串则为获取第一个元素css样式
+          if (typeof arg[0] === 'string') {
+            // IE
+            if (this[0].currentStyle) {
+              return this[0].currentStyle[name]
+            } else {
+              return getComputedStyle(this[0], false)[name]
+            }
+          }
+        }
+        // 为对象时则设置多个样式
+        else if (typeof arg[0] === 'object') {
+          for (var i in arg[0]) {
+            // 遍历每个样式
+            for (var j = this.length - 1; j >= 0; j--) {
+              // 调用拓展方法camelCase将'-'分割线转化为驼峰式
+              this[j].style[A.camelCass(i)] = arg[0][i]
+            }
+          }
+        }
+        // 两个参数则设置一个样式
+      }
+    })
   </script>
 </body>
 </html>
