--- a/design_mode/link.html
+++ b/design_mode/link.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-06-03 10:14:58
- * @LastEditTime: 2020-06-10 20:15:14
+ * @LastEditTime: 2020-06-10 22:08:56
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: /interviews/interview/design_mode/link.html
@@ -187,6 +187,11 @@
           }
         }
         // 两个参数则设置一个样式
+        else if (len === 2) {
+          for (var j = this.length - 1; j >= 0; j--) {
+            this[j].style[A.camelCase(arg[0])] = arg
+          }
+        }
       }
     })
   </script>
