feat: 完成时间复杂度的学习

--- a/arithmetic/complexity.html
+++ b/arithmetic/complexity.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-06-23 20:25:40
- * @LastEditTime: 2020-06-23 20:59:04
+ * @LastEditTime: 2020-06-28 19:20:51
  * @LastEditors: Please set LastEditors
  * @Description: 时间复杂度与空间复杂度
  https://www.cnblogs.com/GarfieldEr007/p/12251700.html
@@ -17,21 +17,71 @@
 </head>
 <body>
   <script>
-    function factorial (n) {
-      var s = 0,
-        temp = 1
-      for (var i = 1; i <= n; i++) {
-        temp = 1
-        for (var j = 1; j <= i; j++) {
-            temp *= j
-        }
-        s += temp
-      }
-      return s
+    // 最简单的执行
+    function total1() {
+      console.log(1)
     }
+    /**
+     * 任何情况下也只执行这一行代码那么他的复杂度就是O(1)
+    */
 
-    // 阶乘的和
-    console.log(factorial(2))
+    // 只有一个变量来控制的执行
+    function total2(n) {
+      let sum = 0
+      for(var i=1; i < n; i++) {
+        sum += i
+      }
+    }
+    /**
+     * 这行代码的时间增长趋势是根据n的变化而变化的，所以他的复杂度就是O(n)
+    */
+
+    // 循环累加
+    function total3 (n) {
+      var sum = 0;  // t
+      for (var i = 0; i < n; i++) { // tn 循环次数乘以n
+        sum += i;   // tn
+      }
+      return sum  // t
+    }
+    /*
+     * 2t + 2tn = 2t(1+n)
+     * 取最大量级就是O(n)
+     */
+    // console.log('total3 is ', total3(4))
+
+    // 新循环累加
+    function total4 (n) {
+      var sum = 0;  // t
+      for (var i = 0; i < n; i++) {   // tn
+        for (var j = 0; j < n; j++) { // t*n*n  循环次数乘以n的平方
+          sum = sum + i + j           // t*n*n
+        }
+      }
+      return sum        // t
+    }
+    /*
+     * 2t + tn + 2tnn = t(2 + n + 2(n^2))
+     * 取最大量级是O(n^2)
+     */
+    // console.log('total4 is ', total4(4))
+
+    // 记录log的循环方式
+    function log1(n) {
+      var sum = 0;
+      var i = 1;
+      while (i <= n) {  // 循环次数为 2^x = n
+        sum += i;
+        i = i * 2;
+      }
+    }
+    /*
+     * 循环次数为x的对数
+     * 每次i乘以2就会更接近n，所以循环次数是以2为底，i微指数的
+     * 所以这次的时间复杂度为 O(logn)
+     * 这个表达是不需要底数的，因为在算法看来，当n趋于无限大的时候，底数是多少都不重要
+     */
+    log1(18)
   </script>
 </body>
 </html>
