--- a/fe_test/arrows_fun.html
+++ b/fe_test/arrows_fun.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-06-29 11:31:29
- * @LastEditTime: 2020-06-29 21:18:08
+ * @LastEditTime: 2020-07-01 12:20:31
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: /interviews/interview/fe_test/arrows_fun.html
@@ -47,7 +47,7 @@
     }
 
     // const a = new arrow2()
-    const newo = obb.y.odd
+    const newo = obb.y.odd.bind({x: 322})
     newo()
   </script>
 </body>
