--- a/fe_test/arrows_fun.html
+++ b/fe_test/arrows_fun.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-06-29 11:31:29
- * @LastEditTime: 2020-07-01 12:20:31
+ * @LastEditTime: 2021-01-13 23:24:16
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: /interviews/interview/fe_test/arrows_fun.html
@@ -21,8 +21,7 @@
       x: 222,
       y: {
         x:333,
-        obc: function f() {
-          console.log(this)
+        obc: () => {
           var x = 111;
           var obj = {
             x: 22,
@@ -37,7 +36,9 @@
         }
       }
     }
-    // obb.y.obc()
+    obb.y.obc()
+    // 此时输出的x为多少
+    // 如果答出是11，那么怎么样才能输出333
 
     const arrow2 = () => {
       this.a = 112
@@ -47,8 +48,8 @@
     }
 
     // const a = new arrow2()
-    const newo = obb.y.odd.bind({x: 322})
-    newo()
+    // const newo = obb.y.odd.bind({x: 322})
+    // newo()
   </script>
 </body>
 </html>
